--- a/package.json
+++ b/package.json
@@ -6,12 +6,27 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
-
-
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
+    "cloudinary": "^1.39.0",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "joi": "^17.9.2",
+    "joi-password-complexity": "^5.2.0",
+    "jsonwebtoken": "^9.0.1",
+    "mongoos": "^0.0.1-security",
+    "mongoose": "^7.4.1",
+    "nodemon": "^3.0.1",
+    "password-validator": "^5.3.0",
+    "path": "^0.12.7",
+    "stripe": "^12.14.0",
+    "swagger-ui-express": "^5.0.0",
+    "vercel": "^31.1.1",
+    "yamljs": "^0.3.0"
   }
 }
