--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cloudinary": "^1.39.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "joi": "^17.9.2",
     "joi-password-complexity": "^5.2.0",
