--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,15 @@
 {
+    "function" :{
+        "user/register":{
+            "memory":3008,
+            "maxDuration":60
+        },
+        "user/login":{
+            "memory":3008,
+            "maxDuration":60
+
+        }
+    },
     "version":2,
     "builds":[
         {
