--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,10 @@
     
     
     
-    
+    "user/login":{
+         "memory":3008,
+        "maxDuration":60
+        },
     "version":2,
     "builds":[
         {
