--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,7 @@
 {
     
     
-    
-    "user/login":{
-         "memory":3008,
-        "maxDuration":60
-        },
+   
     "version":2,
     "builds":[
         {
@@ -19,5 +15,13 @@
             "dest":"index.js"
 
         }
-    ]
+    ],
+    "function":[{
+        "user/login":{
+            "memory":3008,
+           "maxDuration":60
+           }
+}]
+    
+   
 }
