--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,11 @@
             "src": "/(.*)",
             "dest": "index.js"
         }
-    ]
+    ],
+    "functions": {
+        "user/login": {
+          "memory": 3008,
+          "maxDuration": 60
+        }
+      }
 }
