--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "build": "npm install && npm run build-server",
-"build-server": "echo 'Building server...' && npm run compile-server",
-"compile-server": "echo 'Compiling server...'"
+    "build-server": "echo 'Building server...' && npm run compile-server",
+    "compile-server": "echo 'Compiling server...'"
   },
   "author": "",
   "license": "ISC",
@@ -19,8 +19,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
+    "handlebars": "^4.7.7",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
+    "nodemailer": "^6.9.4",
     "password-validator": "^5.3.0",
     "stripe": "^12.14.0",
     "swagger-ui-express": "^5.0.0",
